<resources>
    <string name="app_name">Vacation Packages</string>
    <string name="banner">Banner</string>
    <string name="type">Especiais</string>
    <string name="country">Brasil</string>
    <string name="package_banner">Package Banner</string>
    <string name="final_price_label">Preço final:</string>
    <string name="payment_button_label">Realizar pagamento</string>
    <string name="month_hint">MM</string>
    <string name="year_hint">AA</string>
    <string name="cvc_hint">CVC</string>
    <string name="payment_card_name_hint">Nome no cartão</string>
    <string name="payment_tutorial_message">Digite as informações do cartão de crédito que você deseja usar para o
        pagamento
    </string>
    <string name="payment_price_description_message">Valor da compra:</string>
    <string name="payment_card_number_hint">Número do cartão</string>
    <string name="payment_end_button_text">Finalizar compra</string>
    <string name="purchase_summary_congratulation_message">Parabéns!</string>
    <string name="purchase_summary_success_message">Compra realizada com sucesso :)</string>
    <string name="purchase_summary_tutorial_message">Confira o resumo da compra:</string>
</resources>
