<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:id="@+id/payment_tutorial"
            android:text="@string/payment_tutorial_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/payment_price_description"
            android:text="@string/payment_price_description_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintTop_toBottomOf="@id/payment_tutorial"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView
            android:id="@+id/payment_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="24sp"
            android:textColor="@android:color/holo_green_dark"
            app:layout_constraintStart_toStartOf="@+id/payment_price_description"
            app:layout_constraintTop_toBottomOf="@+id/payment_price_description"
            tools:text="R$ 421,50"/>

    <EditText
            android:id="@+id/payment_card_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:inputType="number"
            android:maxLength="12"
            android:hint="@string/payment_card_number_hint"
            app:layout_constraintTop_toBottomOf="@+id/payment_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
            android:id="@+id/payment_card_month"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="2"
            android:hint="@string/month_hint"
            android:textAlignment="center"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="@id/payment_card_number"
            app:layout_constraintBottom_toBottomOf="@+id/payment_card_cvc"/>

    <EditText
            android:id="@+id/payment_card_year"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="2"
            android:textAlignment="center"
            android:gravity="center"
            android:hint="@string/year_hint"
            app:layout_constraintStart_toEndOf="@id/payment_card_month"
            app:layout_constraintBottom_toBottomOf="@+id/payment_card_cvc"/>

    <EditText
            android:id="@+id/payment_card_cvc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="3"
            android:textAlignment="center"
            android:gravity="center"
            android:hint="@string/cvc_hint"
            android:drawableStart="@drawable/ic_cvc_cartao_de_credito"
            android:drawableLeft="@drawable/ic_cvc_cartao_de_credito"
            app:layout_constraintTop_toBottomOf="@id/payment_card_number"
            app:layout_constraintEnd_toEndOf="@id/payment_card_number"/>

    <EditText
            android:id="@+id/payment_card_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/payment_card_name_hint"
            android:inputType="text"
            android:digits="abcdefghijklmnopqrstuvwxyzçABCDEFGHIJKLMNOPQRSTUVWXYZÇ "
            app:layout_constraintTop_toBottomOf="@+id/payment_card_cvc"
            app:layout_constraintEnd_toEndOf="@id/payment_card_cvc"
            app:layout_constraintStart_toStartOf="@+id/payment_card_month"/>

    <Button
            android:id="@+id/payment_end_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/orange_rounded_btn"
            android:text="@string/payment_end_button_text"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@+id/payment_card_name"
            app:layout_constraintStart_toStartOf="@+id/payment_card_name"
            app:layout_constraintEnd_toEndOf="@+id/payment_card_name"/>

</android.support.constraint.ConstraintLayout>